fecdat/force-app/main/default/objects/FEC_In_Approval_Nature_of_Case__c/FEC_In_Approval_Nature_of_Case__c.object-meta.xml
<CustomObject>
    <description>Bộ Nature of Case được sử dụng khi người dùng chỉnh sửa, cập nhật Nature of Case</description>
    <label>In-Approval Nature of Case</label>
    <nameField>
        <displayFormat>NOC-{0}</displayFormat>
        <label>Nature of Case Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>In-Approval Nature of Cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>