fecdat/force-app/main/default/objects/FEC_In_Approval_Nature_of_Case__c/fields/FEC_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>FEC_Product_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Thông tin loại sản phẩm</description>
    <label>Product Type</label>
    <referenceTo>FEC_Product_Type__c</referenceTo>
    <relationshipLabel>In-Approval Nature of Cases</relationshipLabel>
    <relationshipName>In_Approval_Nature_of_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>