fecdat/force-app/main/default/objects/FEC_In_Approval_Nature_of_Case__c/fields/FEC_Sub_Code__c.field-meta.xml
<CustomField>
    <fullName>FEC_Sub_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Thông tin danh mục con</description>
    <label>Sub Code</label>
    <referenceTo>FEC_Sub_Code__c</referenceTo>
    <relationshipLabel>In-Approval Nature of Cases</relationshipLabel>
    <relationshipName>In_Approval_Nature_of_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>